--- a/templates/base.html
+++ b/templates/base.html
@@ -1,1 +1,39 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Django Channels Chat App</title>
+
+    
+    {% block extra_head %}{% endblock extra_head %}
+</head>
+<body>
+    <h1>Chat Application</h1>
+    
+    {% if user.is_authenticated %}
+        <h3>You are logged in as, {{ user.username }}</h3>
+    {% endif %}
+        
+    <ul>
+        {% if user.is_authenticated %}
+            <li>
+                <a href="{% url 'core:home' %}">Home</a>
+            </li>
+            <li>
+                <a href="{% url 'user:logout' %}">Logout</a>
+            </li>
+        {% else %}
+            <li>
+                <a href="{% url 'user:login' %}">Login</a>
+            </li>
+            <li>
+                <a href="{% url 'user:register' %}">Register</a>
+            </li>
+        {% endif %}
+    </ul>
+    {% block content %}{% endblock content %}
+</body>
+</html>
